<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>net.pincette</groupId>
  <artifactId>pincette-json-streams</artifactId>
  <packaging>jar</packaging>
  <version>2.7.0</version>
  <name>pincette-json-streams</name>
  <description>JSON Streams</description>
  <url>https://github.com/json-event-sourcing/pincette-json-streams</url>

  <organization>
    <name>Pincette</name>
    <url>https://pincette.net</url>
  </organization>

  <scm>
    <url>https://github.com/json-event-sourcing/pincette-json-streams</url>
    <connection>scm:git@github.com:json-event-sourcing/pincette-json-streams.git</connection>
    <developerConnection>scm:git@github.com:json-event-sourcing/pincette-json-streams.git
    </developerConnection>
  </scm>

  <developers>
    <developer>
      <id>wdonne</id>
      <name>Werner Donné</name>
      <email>werner.donne@pincette.net</email>
      <url>https://pincette.net</url>
      <organization>Pincette</organization>
      <organizationUrl>https://pincette.net</organizationUrl>
    </developer>
  </developers>

  <licenses>
    <license>
      <name>BSD-style</name>
      <url>http://www.opensource.org/licenses/bsd-license.php</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <properties>
    <maven.compiler.target>21</maven.compiler.target>
    <maven.compiler.source>21</maven.compiler.source>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>software.amazon.awssdk</groupId>
        <artifactId>bom</artifactId>
        <version>2.34.3</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-bom</artifactId>
        <version>4.1.127.Final</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.opentelemetry</groupId>
        <artifactId>opentelemetry-bom</artifactId>
        <version>1.54.1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.apache.kafka</groupId>
      <artifactId>kafka-clients</artifactId>
      <version>4.1.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-common</artifactId>
      <version>2.5.5</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-json</artifactId>
      <version>2.3.2</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-mongo-streams</artifactId>
      <version>3.3.2</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-json-streams-plugin</artifactId>
      <version>3.0.9</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-mongo</artifactId>
      <version>4.3.1</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jes</artifactId>
      <version>3.2.12</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jes-util</artifactId>
      <version>3.2.13</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs</artifactId>
      <version>3.11.0</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs-streams</artifactId>
      <version>1.3.2</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-rs-kafka</artifactId>
      <version>1.3.3</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-kafka-json</artifactId>
      <version>1.0.16</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-config-util</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-jes-tel</artifactId>
      <version>1.0.5</version>
    </dependency>
    <dependency>
      <groupId>com.auth0</groupId>
      <artifactId>java-jwt</artifactId>
      <version>4.5.0</version>
    </dependency>
    <dependency>
      <groupId>org.mongodb</groupId>
      <artifactId>mongodb-driver-sync</artifactId>
      <version>5.6.0</version>
    </dependency>
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>javax.json</artifactId>
      <version>1.1.4</version>
      <classifier>module</classifier>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>2.0.17</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>4.7.7</version>
    </dependency>
    <dependency>
      <groupId>io.opentelemetry</groupId>
      <artifactId>opentelemetry-exporter-otlp</artifactId>
      <exclusions>
        <exclusion>
          <groupId>io.opentelemetry</groupId>
          <artifactId>opentelemetry-exporter-sender-okhttp</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>io.opentelemetry</groupId>
      <artifactId>opentelemetry-exporter-common</artifactId>
    </dependency>
    <dependency>
      <groupId>io.opentelemetry</groupId>
      <artifactId>opentelemetry-exporter-sender-grpc-managed-channel</artifactId>
    </dependency>
    <dependency>
      <groupId>io.grpc</groupId>
      <artifactId>grpc-netty</artifactId>
      <version>1.75.0</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-common</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-buffer</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-transport</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-codec</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-handler</artifactId>
    </dependency>
    <dependency>
      <groupId>software.amazon.awssdk</groupId>
      <artifactId>s3</artifactId>
    </dependency>
    <dependency>
      <groupId>net.pincette</groupId>
      <artifactId>pincette-s3-util</artifactId>
      <version>1.0.4</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>5.13.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.sun.mail</groupId>
      <artifactId>javax.mail</artifactId>
      <version>1.6.2</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <outputDirectory>${project.build.directory}/modules</outputDirectory>
          <archive>
            <manifest>
              <mainClass>net.pincette.json.streams.Application</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.4.6</version>
        <configuration>
          <from>
            <image>gcr.io/distroless/java21-debian12</image>
            <platforms>
              <platform>
                <architecture>amd64</architecture>
                <os>linux</os>
              </platform>
              <platform>
                <architecture>arm64</architecture>
                <os>linux</os>
              </platform>
            </platforms>
          </from>
          <to>
            <image>registry.hub.docker.com/jsoneventsourcing/${project.name}</image>
            <tags>
              <tag>${project.version}</tag>
              <tag>latest</tag>
            </tags>
          </to>
          <container>
            <entrypoint>
              <entry>java</entry>
              <entry>-XX:+ExitOnOutOfMemoryError</entry>
              <entry>-XX:MaxRAMPercentage=75.0</entry>
              <entry>-XX:MaxHeapFreeRatio=10</entry>
              <entry>-XX:MinHeapFreeRatio=5</entry>
              <entry>--module-path</entry>
              <entry>app:app/libs</entry>
              <entry>-module</entry>
              <entry>application/net.pincette.json.streams.Application</entry>
              <entry>run</entry>
            </entrypoint>
            <workingDirectory>/</workingDirectory>
            <user>11000:11000</user>
          </container>
          <extraDirectories>
            <paths>
              <path>
                <from>${project.basedir}/conf_docker</from>
                <into>/conf</into>
              </path>
              <path>
                <from>${project.basedir}/src/main/resources</from>
                <into>/app/classes</into>
              </path>
            </paths>
          </extraDirectories>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.1</version>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>info.picocli</groupId>
              <artifactId>picocli-codegen</artifactId>
              <version>4.7.7</version>
            </path>
          </annotationProcessorPaths>
          <compilerArgs>
            <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
          </compilerArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.8.1</version>
        <executions>
          <execution>
            <id>copy-dependencies-modules</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/modules</outputDirectory>
              <includeScope>compile</includeScope>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
